# AIForge

./: .gitignore  Dockerfile  README.md  README_EN.md  aiforge-dev.bat  aiforge-dev.sh  docker-compose.dev.yml  docker-compose.yml  index.html  pyproject.toml  rm.md  script.js  setup.cfg  styles.css  t.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
docker/: aiforge.toml.template  entrypoint.sh
nginx/: nginx.conf
scripts/: docker-build.sh
src/aiforge/: __init__.py  cli.py  runner.py
src/aiforge/cache/: action_matcher.py  code_cache.py  dynamic_task_type_manager.py  enhanced_cache.py  semantic_action_matcher.py  semantic_cache.py  standardized_cache.py  template_cache.py
src/aiforge/cli/: cli.py  main.py
src/aiforge/config/: config.py  default.toml  remote_config.py
src/aiforge/core/: core.py  data_flow_analyzer.py  dynamic_task_type_manager.py  engine.py  enhanced_error_analyzer.py  orchestrator.py  path_manager.py  result.py  result_manager.py  runner.py  task_manager.py
src/aiforge/execution/: code_blocks.py  engine.py  executor.py  executor_interface.py  parameterized_executor.py  result_processor.py  similarity_parameter_executor.py  unified_executor.py
src/aiforge/extensions/: extension_manager.py  (+1 more)
src/aiforge_deploy/: pyproject.toml
src/aiforge_deploy/cli/: deploy_cli.py
src/aiforge_deploy/cloud/: base_provider.py
src/aiforge_deploy/core/: config_manager.py  deployment_manager.py
src/aiforge_deploy/docker/: compose_generator.py  docker_provider.py
src/aiforge_deploy/docker/templates/: Dockerfile  Dockerfile.package  docker-compose.dev.yml  docker-compose.yml
src/aiforge_deploy/kubernetes/: k8s_provider.py
src/aiforge_gui/: __init__.py  app.py  main.py  pyproject.toml
src/aiforge_gui/cli/: __init__.py  commands.py
src/aiforge_gui/core/: api_server.py  engine_manager.py  streaming_execution_manager.py  webview_bridge.py
src/aiforge_gui/resources/icons/: icon.icns
src/aiforge_gui/resources/static/css/: aiforge.css
src/aiforge_gui/resources/static/js/: main.js  streaming-client.js  ui-adapters.js
src/aiforge_gui/resources/templates/: index.html
src/aiforge_web/: __init__.py  main.py  pyproject.toml  streaming_api.py  streaming_execution_manager.py
src/aiforge_web/api/: __init__.py  dependencies.py
src/aiforge_web/api/routes/: config.py  core.py  health.py
src/aiforge_web/core/: config.py  session_manager.py
src/aiforge_web/static/js/: main.js  streaming-client.js  ui-adapters.js
src/aiforge_web/templates/: index.html
src/aiforge_web/web/static/css/: aiforge.css
src/aiforge_web/web/static/js/: config-manager.js  main.js  streaming-client.js  ui-adapters.js
src/aiforge_web/web/templates/: index.html
tests/: test_aiforge.py  test_aiforge_current_all.py  test_file_operations.py  test_runner.py  test_serach_template.py  test_template_extension.py  test_ui_adapter.py
(+101 files in other folders)
