[metadata]
name = aiforge
version = 0.1.0
author = iniwap
author_email = iniwaper@gmail.com
description = AIForge: 一句话驱动本地 AI 任务执行的开源引擎
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
url = https://github.com/iniwap/aiforge

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Artificial Intelligence
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aiforge = aiforge.cli:main

[tool.setuptools]
include-package-data = true