[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiforge-gui"
version = "0.0.11"
description = "AIForge Terminal GUI"
dependencies = ["aiforge-engine", "textual>=0.40.0"]

[project.scripts]
aiforge-gui = "aiforge_gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aiforge_gui"]
