[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiforge-web"
version = "0.0.11"
description = "AIForge Web Interface"
dependencies = [
    "aiforge-engine",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
]

[project.scripts]
aiforge-web = "aiforge_web.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aiforge_web"]
